@@ -39,7 +39,7 @@ AC_COMPILE_CHECK([sigset_t],
 [#include <signal.h>],
 [sigset_t x],
 AC_DEFINE(POSIX_SIGNALS)))
-AC_HAVE_HEADERS(sys/filio.h sys/sockio.h unistd.h sys/label.h ttyent.h sys/ptyvar.h lastlog.h sys/select.h)
+AC_HAVE_HEADERS(sys/filio.h sys/sockio.h unistd.h sys/label.h ttyent.h sys/ptyvar.h lastlog.h sys/select.h sys/tty.h sys/ttold.h)
 AC_REPLACE_FUNCS(getdtablesize)
 CHECK_DIRENT
 CHECK_FCNTL
